# chapy

./: .gitignore  MANIFEST.in  README.md  _quarto.yml  index.qmd  objects.json  objects.txt  pyproject.toml  theme-dark.scss  theme.scss
chapy/: __init__.py  backend_ollama.py  backend_openai.py  cli.py  main.py  shiny_app.py  utils.py
chapy/configs/: ollama.yml  openai.yml
chattr/: __init__.py  _quarto.yml  app.py  backend_ollama.py  chat.py  cli.py  main.py  prompt.py  shiny.py  shiny_app.py  subprocess.py  utils.py
chattr/configs/: ollama.yml
docs/: index.html  search.json  styles.css
docs/reference/: _defaults.qmd  app.html  app.qmd  chat.html  chat.qmd  index.html  index.qmd  session_defaults.html  use.html  use.qmd
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
reference/: _api_index.qmd  app.qmd  chat.qmd  index.qmd  session_defaults.qmd  use.qmd
src/: app.py
