[project]
name = "chapy"
version = "0.0.5"
authors = [
  { name="Edgar Ruiz", email="edgararuiz@gmail.com" },
]
description = "Enables interaction with different LLMs via the console and Shiny app"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyaml>=24.7.0",
    "requests>=2.32.3",
    "shiny>=1.0.0",
    "faicons>=0.2.2",
    "pyperclip>=1.9.0",
]
[project.urls]
  homepage = "https://github.com/edgararuiz/chapy"
  documentation = "https://edgararuiz.github.io/chapy/"
  issues = "https://github.com/edgararuiz/chapy/issues"
[tool.setuptools]
  packages=["chapy"]
  